[package]
name = "antelope_common"
version = "0.1.0"
authors = ["Denis <denis@pinax.network>"]
description = "Antelope Block Index for transaction traces, actions & database operations."
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-antelope = "0.4"
prost = "0.11"
prost-types = "0.11"